
--> Release 0.0.2

- Adapted to changes in libfritz++
  * Removed dependency to OpenSSL due to licensing issues, 
    using copy of MD5 implementation from GNU coreutils 5.93
- Dropped linking to libssl

--> Release 0.0.3

2010-02-17:
- Fixed "missed calls" indicator. Missed calls during runtime were not 
  indicated. (reported by Christian Mangold)
- Fixed clicking on "missed calls" indicator. A click now shows KFritz's call 
  history.
- Added a missing ';' to kfritz.desktop
- Call history no longer shows a length (0:00) for missed calls.
- Added dutch translations (provided by Richard Bos)

2010-02-18:
- Added CMAKE_SKIP_RPATH to avoid setting a rpath in kfritz binary

2010-02-19:
- Changes in libfritz++
  * Removed md5.[h,c] in favor of libgcrypt, libfritz++ now needs libgcrypt's 
    development header "gcrypt.h" to compile
- Added CMakeModules/FindGCrypt.cmake from 
  http://marc.info/?l=gcrypt-devel&m=126252802612599&w=2 for cmake support of 
  libgcrypt
- Now linking to libgcrypt
- Fixed dutch translation string "Incoming call from <b>%1</b><br/>using %2"
  (reported by Richard Bos)
- Fixed installation location of kfritz.desktop in CMakeLists.txt
  (patch provided by Sebastian Trueg)

2010-02-20:
- Added "Dial number" action, which dials the current selection in a phone 
  book or the call history (suggested by Richard Bos)
  
--> Release 0.0.4
  
2010-02-25:
- Changes in libfritz++
  * Implemented FritzClient::getCurrentIP and FritzClient::reconnectISP
- Added menu entries for getting IP and reconnecting to ISP

2010-02-28:
- Adapted to changes in libfritz++
  * phone book entries now have the addtional fields "quickdial", "vanity", 
    "priority", "important"
  * Fixed decoding of entities in xml phone book parser   
- Added new columns to Fritz Box's phone book view 

2010-03-02:
- Moved ${GCRYPT_LIBRARIES} in CMakeLists.txt to support linking with 
  --as-needed (suggested by Richard Bos)
